apps/healthmap-heart-sayings/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthmap-heart-sayings
  namespace: healthmap-heart-sayings
  labels:
    app.kubernetes.io/name: healthmap-heart-sayings
    app.kubernetes.io/part-of: healthmap
spec:
  
  selector:
    matchLabels:
      app.kubernetes.io/name: healthmap-heart-sayings
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthmap-heart-sayings
        app.kubernetes.io/part-of: healthmap
    spec:
      imagePullSecrets:
          - name: ghcr-secret
      containers:
        - name: heart-sayings
          image: ghcr.io/curatimexai/heart-sayings:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5001
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
