apps/healthmap-heart-sayings/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: heartsaying-network-policy
  namespace: healthmap-heart-sayings
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: healthmap-heart-sayings
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          
      ports:
        - protocol: TCP
          port: 5001
  egress:
    - to:
       - ipBlock:
            cidr: 100.125.0.0/22
      ports:
         - protocol: TCP
           port: 11569
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports: 
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
